--- a/inferless-runtime-config.yaml
+++ b/inferless-runtime-config.yaml
@@ -3,7 +3,9 @@ build:
   python_packages:
     - accelerate==1.8.1
     - sentence-transformers==4.1.0
-    - torch==2.7.0
+    - peft==0.15.2
+    - torch==2.7.1
+    - torchvision==0.22.1
     - inferless==0.2.13
     - pydantic==2.10.2
     - hf_transfer==0.1.9
